--- a/index.html
+++ b/index.html
@@ -973,12 +973,6 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Emily Dodwell is a Principal Inventive Scientist in the Data Science and AI Research organization at AT&amp;T Labs, where she currently focuses on predictive modeling for advertising applications, the creation of interactive tools for data analysis and visualization, and research concerning ethics and fairness in machine learning. Emily is an R enthusiast committed to promoting gender diversity in the community, and she is a member of Forwards, the R Foundation task force on women and other underrepresented groups. Prior to joining AT&amp;T Labs in 2015, Emily taught high school math for three years at Choate Rosemary Hall. She received her M.A. in statistics from Yale University and B.A. in mathematics from Smith College.</p>
 
-<h4 id="anisha-bharathsingh">Anisha BharathSingh</h4>
-
-<p><img src="/img/anisha.png" style="width:20%";/></p>
-
-<p>Anisha BharathSingh (she/her) is a digital marketing expert with four years of experience using data to tell stories and discover opportunities for growth in the digital space. Her passion for R started as an Economics undergrad at Bryn Mawr College and she has since explored R, Data Science and Data for Social Good through Meetups like R-Ladies NYC and the creation of her own data science blog. She is now pursuing her Master of Science in Analytics at The University of Chicago to expand upon her data science and analytics skills.</p>
-
 <h4 id="alejandra-gerosa">Alejandra Gerosa</h4>
 
 <p><img src="/img/alejandra.jpg" style="width:20%";/></p>
@@ -989,7 +983,7 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p><img src="/img/ayanthi.png" style="width:20%";/></p>
 
-<p>Ayanthi Gunawardana (she/her/hers) is a Research Analyst at the New York City Department of Transportation, where she currently analyzes crash and other transportation data to inform street design and transportation policy across all five boroughs. Previously, she worked as a Data Analyst at the NYC Taxi and Limousine Commission (TLC), the regulating body for all for-hire transportation in New York City, where she first learned R and analyzed the TLC’s extensive trip data to inform public policy. She holds a Bachelor of Arts in Sociology from Emory University and a Master of City and Regional Planning from Rutgers University. Ayanthi enjoys training Brazilian Jiu Jitsu, running, taking all forms of public transportation, and cooking/eating spicy food.</p>
+<p>Ayanthi Gunawardana (she/her/hers) is a Data Analytics Manager at the Wunderkind. Previously, Ayanthi worked at the NYC Department of Transportation where she analyzed crash and other transportation data to inform street design and transportation policy across all five boroughs. She holds a Bachelor of Arts in Sociology from Emory University and a Master of City and Regional Planning from Rutgers University. Ayanthi enjoys training Brazilian Jiu Jitsu, running, taking all forms of public transportation, and cooking/eating spicy food.</p>
 
 <h4 id="erin-grand">Erin Grand</h4>
 
@@ -1003,23 +997,29 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Emily Halford works at the New York State Psychiatric Institute and currently focuses on evaluations of suicide crisis services and suicide prevention media campaigns, as well as examining the impact of the COVID-19 pandemic on suicidality. She is enthusiastic about all things R, and is keenly interested in applications of data science in mental health. Emily received her MPH in Epidemiology from Columbia University’s Mailman School of Public Health and her BA in Biology and Environmental Studies from Bates College.</p>
 
-<h4 id="ludmila-janda">Ludmila Janda</h4>
-
-<p><img src="/img/ludmila.jpg" style="width:20%";/></p>
-
-<p>Ludmila Janda is a Data Scientist at Amplify. Amplify is a pioneer in K–12 education since 2000, leading the way in next-generation curriculum and assessment. Today, Amplify serves four million students in all 50 states. Luda’s work provides insights on student and teacher usage, student success, and Amplify’s broader impact. She has a Master’s in Public Policy from the University of North Carolina-Chapel Hill. Her interests include board games, salsa dancing, and causal inference. Follow her on twitter at @ludmila_janda</p>
-
-<h4 id="kaelen-medeiros">Kaelen Medeiros</h4>
-
-<p><img src="/img/kaelen.jpg" style="width:20%";/></p>
-
-<p>Kaelen is a lead data scientist at Calibrate where they’re working to build out data for the company as their first data science hire. They’ve also worked at Medidata, Spring Health, DataCamp, HERE Technologies, and have done a fair amount of R and Shiny consulting on the side. Kaelen has been at various times in their life a film theorist, preschool teacher, test prep tutor, videographer, and nanny before getting a MS in Biostatistics from LSU Health Sciences Center in 2016 and starting work as a statistician and data scientist. They have one cat named Lucy, named for the dispatcher in ‘Twin Peaks’. Outside of work they enjoy podcasts, cats, aliens, nail polish, and data.</p>
-
 <h4 id="angeline-protacio">Angeline Protacio</h4>
 
 <p><img src="/img/angeline.jpg" style="width:20%";/></p>
 
 <p>Angeline Protacio (she/her) is a Data Scientist at Quartet Health, where she uses healthcare claims and product data to improve access to mental health care, and builds tools to support value based care for mental health providers. She has worked with data in a variety of settings, previously leading mental health data surveillance for the NYC Department of Health and Mental Hygiene, as well as dabbling in freelance data science consulting. She has an MPH in Epidemiology, and is passionate about health equity, social determinants of health, and data for social good. She moved to New York ten years ago from California, and remains perfectly happy with her decision to trade driving cars for riding the subway. When she&rsquo;s not playing with data for work, she&rsquo;s still playing with data to help her fantasy baseball team win, while trying to eat everything NYC has to offer.</p>
+
+<h4 id="kristin-akey">Kristin Akey</h4>
+
+<p><img src="/img/kristin-akey.jpg" style="width:20%";/></p>
+
+<p>Kristen Akey (she/her) is a Data Analyst at Civitech, where she helps build tools to increase civic participation. She graduated with a master’s degree from Columbia University in Quantitative Methods in the Social Sciences and received her BA from Barnard College in Political Science. She has previously worked on projects related to political redistricting, campaign finance, and NYC buildings. In her free time, she enjoys biking, rollerblading, and playing fetch with her cat, Sybil.</p>
+
+<h4 id="mei-guan">Mei Guan</h4>
+
+<p><img src="/img/mei-guan.jpg" style="width:20%";/></p>
+
+<p>Mei Guan is a Lead Data Analyst at New Visions for Public Schools where she  helps build an academic planning data product used by every district public school in New York City. Previously, Mei has worked as high school science teacher in Brooklyn and as a data analyst at the New York City Department of Education. She holds a B.S. in Biology from Cornell University and a M.S. in Applied Urban Science and Informatics from New York University.</p>
+
+<h4 id="dorota-rizik">Dorota Rizik</h4>
+
+<p><img src="/img/dorota-rizik.jpg" style="width:20%";/></p>
+
+<p>Dorota (she/her) is a data analyst with a passion for programming, automating repetitive tasks, and workflow efficiency. She has a masters in applied statistics from NYU and currently works at MDRC, a nonprofit policy research organization. She loves fries, dogs, and going to the cinema.</p>
 
 <h2 id="past-board-members">Past board members</h2>
 
@@ -1040,6 +1040,12 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 <h4 id="jasmine-williams-http-linkedin-com-in-jaswilliams-2016-2019"><a href="http://linkedin.com/in/jaswilliams" target="_blank">Jasmine Williams</a> (2016-2019)</h4>
 
 <h4 id="emily-zabor-http-www-emilyzabor-com-2016-2019"><a href="http://www.emilyzabor.com/" target="_blank">Emily Zabor</a> (2016-2019)</h4>
+
+<h4 id="ludmila-janda-2019-2021">Ludmila Janda (2019-2021)</h4>
+
+<h4 id="kaelen-medeiros-2020-2021">Kaelen Medeiros (2020-2021)</h4>
+
+<h4 id="anisha-bharathsingh-2021">Anisha BharathSingh (2021)</h4>
 
   </div>
   
