--- a/index.html
+++ b/index.html
@@ -967,11 +967,11 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <h1 id="meet-our-board-members">Meet our board members</h1>
 
-<h4 id="emily-dodwell-organizer">Emily Dodwell (Organizer)</h4>
+<h4 id="dorota-rizik-organizer">Dorota Rizik (Organizer)</h4>
 
-<p><img src="/img/emilyd.jpg" style="width:20%";/></p>
+<p><img src="/img/dorota-rizik.jpg" style="width:20%";/></p>
 
-<p>Emily Dodwell is a Principal Inventive Scientist in the Data Science and AI Research organization at AT&amp;T Labs, where she currently focuses on predictive modeling for advertising applications, the creation of interactive tools for data analysis and visualization, and research concerning ethics and fairness in machine learning. Emily is an R enthusiast committed to promoting gender diversity in the community, and she is a member of Forwards, the R Foundation task force on women and other underrepresented groups. Prior to joining AT&amp;T Labs in 2015, Emily taught high school math for three years at Choate Rosemary Hall. She received her M.A. in statistics from Yale University and B.A. in mathematics from Smith College.</p>
+<p>Dorota (she/her) is a data analyst with a passion for programming, automating repetitive tasks, and workflow efficiency. She has a masters in applied statistics from NYU and currently works at MDRC, a nonprofit policy research organization. She loves fries, dogs, and going to the cinema.</p>
 
 <h4 id="alejandra-gerosa">Alejandra Gerosa</h4>
 
@@ -1015,12 +1015,6 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p>Mei Guan is a Lead Data Analyst at New Visions for Public Schools where she  helps build an academic planning data product used by every district public school in New York City. Previously, Mei has worked as high school science teacher in Brooklyn and as a data analyst at the New York City Department of Education. She holds a B.S. in Biology from Cornell University and a M.S. in Applied Urban Science and Informatics from New York University.</p>
 
-<h4 id="dorota-rizik">Dorota Rizik</h4>
-
-<p><img src="/img/dorota-rizik.jpg" style="width:20%";/></p>
-
-<p>Dorota (she/her) is a data analyst with a passion for programming, automating repetitive tasks, and workflow efficiency. She has a masters in applied statistics from NYU and currently works at MDRC, a nonprofit policy research organization. She loves fries, dogs, and going to the cinema.</p>
-
 <h2 id="past-board-members">Past board members</h2>
 
 <h4 id="soumya-kalra-founder-https-www-linkedin-com-in-soumyakalra-2016-2019"><a href="https://www.linkedin.com/in/soumyakalra" target="_blank">Soumya Kalra (Founder)</a> (2016-2019)</h4>
@@ -1046,6 +1040,8 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 <h4 id="kaelen-medeiros-2020-2021">Kaelen Medeiros (2020-2021)</h4>
 
 <h4 id="anisha-bharathsingh-2021">Anisha BharathSingh (2021)</h4>
+
+<h4 id="emily-dodwell-2019-2022">Emily Dodwell (2019-2022)</h4>
 
   </div>
   
