--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 
 <p><img src="/img/mei-guan.jpg" style="width:20%";/></p>
 
-<p>Mei Guan is a Lead Data Analyst at New Visions for Public Schools where she  helps build an academic planning data product used by every district public school in New York City. Previously, Mei has worked as high school science teacher in Brooklyn and as a data analyst at the New York City Department of Education. She holds a B.S. in Biology from Cornell University and a M.S. in Applied Urban Science and Informatics from New York University.</p>
+<p>Mei Guan(she/her/hers) is an Analytics Director at TNTP where she focuses her research on topics related to social and economic mobility for young people. Previously, Mei has worked as high school science teacher in Brooklyn and as a data analyst at the New York City Department of Education. She holds a B.S. in Biology from Cornell University and a M.S. in Applied Urban Science and Informatics from New York University.</p>
 
 <h4 id="clara-wang">Clara Wang</h4>
 
@@ -991,6 +991,24 @@ On Thursday, May 23, I attended my first R-Ladies NYC meetup! R-Ladies NYC is an
 <p><img src="/img/Jacqui.jpeg" style="width:20%";/></p>
 
 <p>Jacki (she/hers) is a co-founder and CTO at a start-up company called <a href="https://www.generable.com" target="_blank">Generable</a>, which uses biologically-inspired Bayesian models to estimate treatment effects for oncology drugs from small-sample clinical data. She has over 10 years of experience in R, is an experienced Python developer, and is either author of or contributor to several open-source packages. She is passionate about improving oncology through Bayesian analysis and bioinformatics.</p>
+
+<h4 id="nicole-burke-ph-d">Nicole Burke, Ph.D</h4>
+
+<p><img src="/img/nicole-burke.jpg" style="width:20%";/></p>
+
+<p>Nicole (she/her) is a Scientific Software Engineer at The Child Mind Institute, where she helps build software and data analysis pipelines to support research that studies children&rsquo;s mental health. As a Developmental Research Psychologist by training, she previously spent 10 years in academia using social networks to explore how children&rsquo;s social experience relates to their social cognitive development. She holds a Ph.D. in Developmental Psychology from The University of Chicago and a B.A. in Psychology and Cognitive Science from Northwestern University. She loves all things R, data, long distance running, and cuddling with her senior rescue pup.</p>
+
+<h4 id="anni-liu">Anni Liu</h4>
+
+<p><img src="/img/Headshot_ALiu.jpeg" style="width:20%";/></p>
+
+<p>Anni (she/her) is a bioinformatics assistant at Rockefeller University, where she helps maintain and update analytical pipelines, with passion in exploring patterns in patients’ NGS omics data. She graduated with a master’s degree in Biostatistics and Data Science from Cornell University. Previously, she contributed to projects on RNA-seq tool development and healthcare data analysis, and also worked on mutation characteristics in patients with infectious diseases. Outside of work, she enjoys walking around NYC, reading books, and picking up new programming tips.</p>
+
+<h4 id="dana-trembley">Dana Trembley</h4>
+
+<p><img src="/img/dana-trembley.jpeg" style="width:20%";/></p>
+
+<p>Dana (she/her) is a data manager with a love of coding, collaboring with others, and diving into the weeds. She has a masters in economics from BU and has over 8 years experience in people analytics. She has previously worked for companies on projects related to modeling differences in employee outcomes - such as equity in pay and promotions - by gender and race/ethnicity.  She loves pierogies, taking her dog to see his friends at the dog park, and going to live concerts.</p>
 
 <h2 id="past-board-members">Past board members</h2>
 
